--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v2
         with:
-          context: ./packages/api
+          context: ./packages/web
           push: true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
