--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,6 +48,9 @@ jobs:
           cd $GITHUB_WORKSPACE/terraform/environment
           terraform init -reconfigure -backend-config="bucket=family-seams-terraform-bucket"
           terraform workspace select production
+
+          aws eks update-kubeconfig --name family-seams-production
+
           terraform plan
           # terraform apply -auto-approve
 
