apply environment terraform

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,6 +52,5 @@ jobs:
           aws eks update-kubeconfig --name family-seams-production
           export KUBE_CONFIG_PATH=/home/runner/.kube/config
 
-          terraform plan
-          # terraform apply -auto-approve
+          terraform apply -auto-approve
 
