--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,36 @@ on: push
   #   branches:
   #     - main
 jobs:
+  version:
+    name: Version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: Node Cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install
+        run: |
+          npm ci
+          npm run lerna -- exec npm ci
+
+      - name: Version
+        run: |
+          npm run lerna -- exec npm --no-git-tag-version version patch
+          npm run lerna -- version patch
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
