--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -31,8 +33,15 @@ jobs:
 
       - name: Version
         run: |
-          npm run lerna -- exec npm --no-git-tag-version version patch
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          
+          npm --no-git-tag-version version patch
+          git add .
+          git commit -m "Update root package.json"
+          
           npm run lerna -- version patch
+          git push origin
 
   deploy:
     name: Deploy
