--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,8 +1,14 @@
 name: terraform
-on: push
-  # push:
-  #   branches:
-  #     - main
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - 'lerna.json'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'packages/*/package.json'
+      - 'packages/*/package-lock.json'
 jobs:
   version:
     name: Version
@@ -12,6 +18,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          
+      - uses: mstachniuk/ci-skip@v1
 
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -49,6 +57,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - uses: mstachniuk/ci-skip@v1
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
