--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ yarn-error.log*
 out
 *.sublime-project
 *.sublime-workspace
+
+.terraform
+
+terraform/init/contact.tfvars
+terraform/module/aws/environment/region/fargate-roles*.json
