--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+          
+      - uses: mstachniuk/ci-skip@v1
 
       - name: Setup Node
         uses: actions/setup-node@v1
