--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+          
+      - uses: mstachniuk/ci-skip@v1
+      
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
