--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: {}
   push:
     branches:
-      - '**'
+      - main
     paths-ignore:
       - 'lerna.json'
       - 'package.json'
