--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -1,4 +1,4 @@
-name: terraform
+name: all
 on:
   workflow_dispatch: {}
   push:
@@ -45,7 +45,7 @@ jobs:
       - name: Set Vars
         id: vars
         run: |
-          echo "::set-output name=version::$(node -p require('./package.json').version)"
+          echo ::set-output name=version::$(node -p "require('./package.json').version")
 
       - name: Docker Setup
         uses: docker/setup-buildx-action@v1
