--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Set Vars
         id: vars
         run: |
-          echo ::set-output name=version::$(node -p "require('./package.json').version")
+          VERSION=$(node -p "require('./package.json').version")
+          echo "::set-output name=version::$VERSION"
 
       - name: Docker Setup
         uses: docker/setup-buildx-action@v1
