--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "0.0.14",
+  "version": "0.0.18",
   "description": "REST API",
   "author": "Adam Kaplan",
   "homepage": "https://github.com/three-cs/family-seams/tree/master/packages/api#readme",
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "test": "jest --coverage",
-    "watch": "nodemon lib/api.js"
+    "watch": "nodemon lib/api.js",
+    "build": "echo no-op"
   },
   "bugs": {
     "url": "https://github.com/three-cs/family-seams/issues"
