--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -2,10 +2,8 @@ name: destroy
 on:
   workflow_dispatch: {}
 jobs:
-
   destroy-application:
     name: Deploy Application
-    needs: deploy
     runs-on: ubuntu-latest
     strategy:
       matrix: 
@@ -44,10 +42,10 @@ jobs:
 
           terraform destroy -auto-approve
 
-  deploy:
+  destroy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: destroy-application
     steps:
       - name: Checkout
         uses: actions/checkout@v2
